@@ -22,7 +22,7 @@
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
-#include <map.h>
+#include <map>
 #include "datfile.h"
 #include "rcount.h"
 
